--- a/index-dev.html
+++ b/index-dev.html
@@ -11,7 +11,7 @@
     <meta http-equiv=“Expires” content=”-1″>
     <meta http-equiv=“CACHE-CONTROL” content=”NO-CACHE”>
 
-    <title>IGV</title>
+    <title>SonicIGV</title>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
